2011-01-27  Darin Adler  <darin@apple.com>

Reviewed by Dan Bernstein.

        Changing cursor style has no effect until the mouse moves
        https://bugs.webkit.org/show_bug.cgi?id=14344
        rdar://problem/7563712

        No tests added because we don't have infrastructure for testing actual cursor
        changes (as opposed to cursor style computation) at this time. We might add it later.

        * page/EventHandler.cpp:
        (WebCore::EventHandler::dispatchFakeMouseMoveEventSoon): Added.
        * page/EventHandler.h: Ditto.

        * rendering/RenderObject.cpp:
        (WebCore::areNonIdenticalCursorListsEqual): Added.
        (WebCore::areCursorsEqual): Added.
        (WebCore::RenderObject::styleDidChange): Call dispatchFakeMouseMoveEventSoon if
        cursor styles changed.


git-svn-id: svn://svn.chromium.org/blink/trunk@76891 bbb929c8-8fbe-4397-9dbb-9b2b20218538