third_party/WebKit/Source/WebKit/mac/Misc/WebIconDatabase.mm
@@ -560,10 +560,8 @@ static NSData* iconDataFromPathForIconURL(NSString *databasePath, NSString *icon
 @implementation WebIconDatabasePrivate
 @end
 
-@interface ThreadEnabler : NSObject {
-}
+@interface ThreadEnabler : NSObject
 + (void)enableThreading;
-
 - (void)threadEnablingSelector:(id)arg;
 @end
 
@@ -571,7 +569,6 @@ static NSData* iconDataFromPathForIconURL(NSString *databasePath, NSString *icon
 
 - (void)threadEnablingSelector:(id)arg
 {
-    return;
 }
 
 + (void)enableThreading
@@ -590,7 +587,7 @@ bool importToWebCoreFormat()
     if (![NSThread isMultiThreaded])
         [ThreadEnabler enableThreading];
     ASSERT([NSThread isMultiThreaded]);    
-    
+
     // Get the directory the old icon database *should* be in
     NSUserDefaults *defaults = [NSUserDefaults standardUserDefaults];
     NSString *databaseDirectory = [defaults objectForKey:WebIconDatabaseImportDirectoryDefaultsKey];
